black and white teammember photos, formatting

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-	<title>Home</title>
+	<title>Advisor Stream</title>
 	<meta name="description" content="Advisorstream Splash Page">
 	<meta name="keywords" content="Advisorstream Splash Page">
 	<link rel="shortcut icon" href="assets/img/favicon.ico">
@@ -194,11 +194,12 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 	</div>
 
 	<section id="testimonials" class="section process-section align-center dark-text">
+
 		<div class="container">
 			<div class="section-content row">
 				<div class="row container">
-					<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
-						<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="John S." id="img-john"/>
+					<div class="col-sm-4 pull-right animated testimonial-box" data-duration="500" data-animation="fadeInRight">
+						<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="John S."/>
 					</div>
 					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 						<article>
@@ -215,8 +216,8 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
-						<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="Mary S." id="img-mary"/>
+					<div class="col-sm-4 animated testimonial-box" data-duration="500" data-animation="fadeInLeft">
+						<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="Mary S."/>
 					</div>
 					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 						<article>
@@ -237,8 +238,8 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
-						<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="Mike G." id="img-mike"/>
+					<div class="col-sm-4 pull-right animated testimonial-box" data-duration="500" data-animation="fadeInRight">
+						<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="Mike G." />
 					</div>
 					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 						<article>
@@ -255,8 +256,8 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
-						<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="Joel A." id="img-joel"/>
+					<div class="col-sm-4 animated testimonial-box" data-duration="500" data-animation="fadeInLeft">
+						<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="Joel A."/>
 					</div>
 					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 						<article>
@@ -274,7 +275,6 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 			</div>
 		</div>
 	</section>
-
 
 	<section id="features" class="section features-section align-center inverted">
 		<div class="row">
@@ -335,28 +335,28 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 
 						<div class="tab-content">
 							<div class="tab-pane in active" id="cbn">
-								<img src="assets/img/features/main_page.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 								<h6>Access to unlimited premium, licensed, compliant content from the top publishers in the world. </h6>
+								<img src="assets/img/features/main_page.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="social-media">
-								<img src="assets/img/features/first_financial.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 								<h6> Custom branded newsletters that are automatically sent to clients every week. </h6>
+								<img src="assets/img/features/first_financial.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="opt-in">
+								<h6> Beautiful blog pages on your website that are automatically updated. </h6>
 								<img src="assets/img/features/Broussard1.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
-								<h6> Beautiful blog pages on your website that are automatically updated.   </h6>
 							</div>
 							<div class="tab-pane" id="brand">
-								<img src="assets/img/features/doessier.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 								<h6> Automatically capture new leads with custom opt in and analytics.  </h6>
+								<img src="assets/img/features/doessier.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="lead">
-								<img src="assets/img/features/linked_in.png" class="comp-pics-1 animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 								<h6> Que up articles and AdvisorStream will automatically post to your LinkedIn, Twitter, or Facebook.  </h6>
+								<img src="assets/img/features/linked_in.png" class="comp-pics-1 animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="content">
-								<img src="assets/img/features/rich_features_3.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
 								<h6> Finra and IROC complient content</h6>
+								<img src="assets/img/features/rich_features_3.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
 							</div>
 						</div>
 					</div>
@@ -493,7 +493,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Kevin2.jpg" alt="Kevin">
+                                    <img src="assets/img/team/Kevin2.jpg" class="black-and-white" alt="Kevin">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
@@ -515,7 +515,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Martin_0.jpg" alt="Martin">
+                                    <img src="assets/img/team/Martin_0.jpg" class="black-and-white" alt="Martin">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
@@ -535,7 +535,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Bryan.jpg" alt="Bryan">
+                                    <img src="assets/img/team/Bryan.jpg" class="black-and-white" alt="Bryan">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
@@ -554,7 +554,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Derek2.jpg" alt="Derek" style="height: 255px;">
+                                    <img src="assets/img/team/derek.jpg" alt="Derek" class="black-and-white">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
