resize images for better performance

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -554,7 +554,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/derek.jpg" alt="Derek" class="black-and-white">
+                                    <img src="assets/img/team/Derek.jpg" alt="Derek" class="black-and-white">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
