Added ids to demo buttons

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -155,7 +155,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 								</div>
 							</div>
 						</li>
-						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
+						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-sm btn-outline-color" id="demo">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -171,7 +171,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 					<p class="sub-title">Give us 30 days. We'll get you new leads. </p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline">Book Demo</a>
+					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline" id="demo">Book Demo</a>
 				</div>
 			</div>
 		</div>
@@ -208,7 +208,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 								Over the past 6 months I now have <span class="highlight-testimonial"><strong>7 new clients which has led to $50k in profits.</strong></span></h6>
 							<p class="sub-title"><em>-John S., Independent Financial Advisor, Undisclosed Firm</em></p>
 							<br>
-							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
 					</div>
 				</div>
@@ -230,7 +230,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							</h6>
 							<p class="sub-title"><em>-Mary S., Financial Advisor, Undisclosed Firm</em></p>
 							<br>
-							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
 					</div>
 				</div>
@@ -248,7 +248,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 								<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
 							<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
 							<br>
-							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
 					</div>
 				</div>
@@ -268,7 +268,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							</h6>
 							<p class="sub-title"><em>-Joel Aegor, Compliance Officer</em></p>
 							<br>
-							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
 					</div>
 				</div>
@@ -471,7 +471,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 			</div>
 
             <div class="col-md-3 col-lg-3">
-				<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
+				<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline" style="margin-top: 7px;" id="demo">Book Demo</a>
             </div>
 		</div>
 	</section>
