--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -224,7 +224,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							<h5>
 								"I was losing assets and clients..."</h5>
 							<h6>
-								In the past I found that I was losing touch with clients and they were leaving for other advisors. AdvisorStream's weekly
+								AdvisorStream's weekly
 								updates keeps constant communication with my clients and has positioned me as an expert in the field.
 								In both 2013 and 2014, <span class="highlight-testimonial"><strong>I have reduced lost assets by 30%.</strong></span>
 							</h6>
@@ -243,7 +243,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 					</div>
 					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 						<article>
-							<h5>"I had no time to learn social media marketing..."<br></h5>
+							<h5>"I had no time to learn social media marketing and do daily posts..."<br></h5>
 							<h6>"Advisor Stream automatically posts credible articles to my Facebook, Linkedin and Twitter for me every day or week.
 								<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
 							<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
