Added hot jar code

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -27,6 +27,7 @@
 	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1', text: 'Book Demo', color: '#5b2883', branding: false});</script>
 	<!-- Calendly badge widget end -->
 
+<!-- Kiss Metrics Snippet -->
 	<script type="text/javascript">var _kmq = _kmq || [];
 var _kmk = _kmk || '361674bfd21de4afbc943215e1e68494cd407dd8';
 function _kms(u){
@@ -40,6 +41,19 @@ function _kms(u){
 _kms('//i.kissmetrics.com/i.js');
 _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 </script>
+<!-- Hot Jar Snippit-->
+<!-- Hotjar Tracking Code for http://getadvisorstream.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:233462,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+<!-- -->
 
 </head>
 
