removed bank logos

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -197,11 +197,9 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<h5>Partners and Publishers</h5>
 				<li><img class="animated" data-animation="fadeInDown" data-duration="500" src="assets/img/logos/Bloomberg_logo.png" alt="Bloomberg" style="width: 155px; height: 35px; margin-bottom: 10px;"/></li>
 				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="200" src="assets/img/logos/business-insider-logo.png" alt="Business-Insider" style="width: 80px; height: 50px;"/></li>
-				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="400" src="assets/img/logos/envestnet-logo.png" alt="Envestnet" style="width: 130px; height: 50px;"/></li>
 				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="600" src="assets/img/logos/Forbes_logo.svg.png" alt="Forbes"
                          style="width: 90px; height: 38px; padding-bottom: 10px;"/></li>
 				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Investopedia_logo.png" alt="Investopedia" style="width: 140px; height: 30px; margin-bottom: 8px;"/></li>
-				<li><img class="animated" data-animation="fadeInUp" data-duration="500" data-delay="1000" src="assets/img/logos/new_york_times_logo.jpg" alt="New York Times" style="width: 60px; height: 50px;"/></li>
 				<li><img class="animated" data-animation="fadeInDown" data-duration="500" data-delay="800" src="assets/img/logos/Reuters_logo.png" alt="Reuters" style="width: 125px; height: 35px; margin-bottom: 10px;"/></li>
 			</ul>
 		</div>
@@ -349,27 +347,27 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 
 						<div class="tab-content">
 							<div class="tab-pane in active" id="cbn">
-								<h6>Access to unlimited premium, licensed, compliant content from the top publishers in the world. </h6>
+								<h6 style="padding-bottom: 20px;">Access to unlimited premium, licensed, compliant content from the top publishers in the world. </h6>
 								<img src="assets/img/features/main_page.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="social-media">
-								<h6> Custom branded newsletters that are automatically sent to clients every week. </h6>
+								<h6 style="padding-bottom: 20px;"> Custom branded newsletters that are automatically sent to clients every week. </h6>
 								<img src="assets/img/features/first_financial.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="opt-in">
-								<h6> Beautiful blog pages on your website that are automatically updated. </h6>
+								<h6 style="padding-bottom: 20px;"> Beautiful blog pages on your website that are automatically updated. </h6>
 								<img src="assets/img/features/Broussard1.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="brand">
-								<h6> Automatically capture new leads with custom opt in and analytics.  </h6>
+								<h6 style="padding-bottom: 20px;"> Automatically capture new leads with custom opt in and analytics.  </h6>
 								<img src="assets/img/features/doessier.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="lead">
-								<h6> Que up articles and AdvisorStream will automatically post to your LinkedIn, Twitter, or Facebook.  </h6>
+								<h6 style="padding-bottom: 20px;"> Que up articles and AdvisorStream will automatically post to your LinkedIn, Twitter, or Facebook.  </h6>
 								<img src="assets/img/features/linked_in.png" class="comp-pics-1 animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
 							</div>
 							<div class="tab-pane" id="content">
-								<h6> Finra and IROC complient content</h6>
+								<h6 style="padding-bottom: 20px;"> Finra and IROC complient content</h6>
 								<img src="assets/img/features/rich_features_3.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
 							</div>
 						</div>
@@ -399,17 +397,12 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				</div>
                 <div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
-                        <img src="assets/img/Clients/Scotia.jpg" alt="Scoita" style="width: 50px; height: 50px;"/>
+                        <img src="assets/img/logos/envestnet-logo.png" alt="Envestnet" style="width: 80px; height: 30px;  margin-top: 10px;"/>
 					</article>
 				</div>
                 <div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/SEI.png" alt="SEI" style="width: 50px; height: 50px;"/>
-					</article>
-				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
-					<article class="align-center">
-                        <img src="assets/img/Clients/TD.png" alt="TD" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
@@ -420,11 +413,6 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Common-Wealth-Financial.jpg" alt="Commonwealth" style="width: 50px; height: 50px;"/>
-					</article>
-				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
-					<article class="align-center">
-                        <img src="assets/img/Clients/National-Bank.png" alt="National-Bank" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
 			</div>
@@ -568,7 +556,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Derek.jpg" alt="Derek" class="black-and-white">
+                                    <img src="assets/img/team/derek.jpg" alt="Derek" class="black-and-white">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
