Changed team content

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -499,9 +499,9 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
-												<p>15 years of financial industry experience.
-													Helped launched Clientinsights.ca with Dan Richards.
-													Head of project management for Richardson Partners Financial.
+												<p> 15 Years Experience in Financial Services Industry
+													
+													
 													</p>
                                             </div>
                                         </div>
@@ -521,7 +521,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
-                                                <p>15 years software design and development, including 7 years in financial services.
+                                                <p>15 Years Software Design and Development and 7 Years in Financial Services Industry
 												</p>
                                             </div>
                                         </div>
@@ -560,7 +560,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
-                                                <p>Derek Started and sold Red Flag Deals, the largest coupon site in Canada. </p>
+                                                <p>Founded and Sold Red Flag Deals in 2010 - Largest Coupon Site in Canada. </p>
                                             </div>
                                         </div>
                                     </div>
