Testimonial content change.

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -218,7 +218,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							<h5>"I needed more referrals..."<br></h5>
 							<h6> Advisor Stream now automatically asks my clients for new referrals and the impact has been clear.
 								Over the past 6 months I now have <span class="highlight-testimonial"><strong>7 new clients which has led to $50k in profits.</strong></span></h6>
-							<p class="sub-title"><em>-John S., Independent Financial Advisor, Undisclosed Firm</em></p>
+							<p class="sub-title"><em>-Alan Neesee, Independent Financial Advisor</em></p>
 							<br>
 							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
@@ -240,7 +240,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 								updates keeps constant communication with my clients and has positioned me as an expert in the field.
 								In both 2013 and 2014, <span class="highlight-testimonial"><strong>I have reduced lost assets by 30%.</strong></span>
 							</h6>
-							<p class="sub-title"><em>-Mary S., Financial Advisor, Undisclosed Firm</em></p>
+							<p class="sub-title"><em>-Lisa Roccafort, Financial Advisor </em></p>
 							<br>
 							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
@@ -258,7 +258,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							<h5>"I had no time to learn social media marketing and do daily posts..."<br></h5>
 							<h6>"Advisor Stream automatically posts credible articles to my Facebook, Linkedin and Twitter for me every day or week.
 								<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
-							<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
+							<p class="sub-title"><em>-Kyle Greer, Financial Advisor</em></p>
 							<br>
 							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" id="demo" class="btn btn-outline-color">Book Demo</a>
 						</article>
