--- a/register.html
+++ b/register.html
@@ -20,6 +20,8 @@
 		<script src="assets/js/html5shiv.js"></script>
 		<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
+
+
 </head>
 
 <body id="register-page" class="register-page">
@@ -92,19 +94,69 @@
 					</div>
 					
 				</div>
+				
+<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.14238" type="text/javascript"></script>
+<script type="text/javascript"> JotForm.init(function(){ JotForm.clearFieldOnHide="disable"; JotForm.onSubmissionError="jumpToFirstError"; });
+</script>
+
+
+
+<form class="jotform-form" action="https://submit.jotform.us/submit/62025549780156/" method="post" name="form_62025549780156" id="62025549780156" accept-charset="utf-8"> <input type="hidden" name="formID" value="62025549780156" target="_self" onsubmit="" /> 
+	<div class="form-all"> 
+		<ul class="form-section page-section"> 
+			<li class="form-line" data-type="control_fullname" id="id_3"> 
+				<label class="form-label form-label-left form-label-auto" id="label_3" for="input_3"> Name </label> 
+
+			<div id="cid_3" class="form-input jf-required"> <span class="form-sub-label-container" style="vertical-align: top"> 
+		<input class="form-textbox" type="text" size="10" name="q3_name[first]" id="first_3" /> <label class="form-sub-label" for="first_3" id="sublabel_first" style="min-height: 13px;"> First Name 
+		</label> </span> <span class="form-sub-label-container" style="vertical-align: top"> 
+
+		<input class="form-textbox" type="text" size="15" name="q3_name[last]" id="last_3" /> 
+
+		<label class="form-sub-label" for="last_3" id="sublabel_last" style="min-height: 13px;"> Last Name </label> </span> </div> </li> <li class="form-line" data-type="control_phone" id="id_5"> <label class="form-label form-label-left form-label-auto" id="label_5" for="input_5"> Phone Number </label> <div id="cid_5" class="form-input jf-required"> <span class="form-sub-label-container" style="vertical-align: top"> 
+
+		<input class="form-textbox" type="tel" name="q5_phoneNumber[area]" id="input_5_area" size="3"> <span class="phone-separate"> &nbsp;- </span> <label class="form-sub-label" for="input_5_area" id="sublabel_area" style="min-height: 13px;"> Area Code </label> </span> 
+		<span class="form-sub-label-container" style="vertical-align: top"> 
+
+		<input class="form-textbox" type="tel" name="q5_phoneNumber[phone]" id="input_5_phone" size="8"> 
+
+		<label class="form-sub-label" for="input_5_phone" id="sublabel_phone" style="min-height: 13px;"> Phone Number 
+		</label> 
+		</span> 
+		</div> 
+	</li> 
+
+
+		<li class="form-line" data-type="control_button" id="id_2"> 
+			<div id="cid_2" class="form-input-wide"> 
+				<div style="margin-left:156px" class="form-buttons-wrapper"> 
+					<button id="input_2" type="submit" class="form-submit-button"> Submit </button> 
+				</div> 
+			</div> 
+		</li> 
+		<li style="display:none"> Should be Empty: <input type="text" name="website" value="" /> </li> </ul> 
+	</div> 
+
+		<input type="hidden" id="simple_spc" name="simple_spc" value="62025549780156" /> 
+
+		<script type="text/javascript"> document.getElementById("si" + "mple" + "_spc").value = "62025549780156-62025549780156"; </script>
+</form>
+<script type="text/javascript">JotForm.ownerView=true;</script>
 
 				<div class="col-sm-6" style="padding: 25px 35px;">
-					<form class="form lead-form form-light" method="post" action="signup.php">
+					<form class="form lead-form form-light" method="post" action="https://submit.jotform.us/submit/62025549780156/"  name="form_62025549780156" id="62025549780156" accept-charset="utf-8"> 
+						<input type="hidden" name="formID" value="62025549780156" /> <div class="form-all"> <ul class="form-section page-section">
 						<div class="col-sm-12">
 							<h3 class="editContent highlight">Text Me My Coupon Code!</h3>
 							<p class="editContent highlight"> Don't worry. We never spam or use your information for purposes other than providing you a quote and coupon. </p>
 						</div>
 						<div class="form-group col-sm-12">
-							<input id="first_name" type="text" name="first_name" class="form-control required" placeholder="First name">
+							<input type="text" size="10" name="q3_name[first]" id="first_3" class="form-control required" placeholder="First name">
 						</div>
 		
 						<div class="form-group col-sm-12">
-							<input id="email" type="email" name="email" class="form-control required email" placeholder="Phone Number">
+							<input type="tel" name="q5_phoneNumber[phone]" id="input_5_phone" size="8" class="form-control required email" placeholder="Phone Number">
 						</div>
 							<div class="form-group col-sm-12">
 							<input id="address" type="email" name="email" class="form-control required email" placeholder="Address">
@@ -114,8 +166,10 @@
 						</div> -->
 
 						<div class="form-group col-sm-12">
-							<input type="submit" value="Send Me My Coupon" class="btn btn-lg btn-solid btn-block">
+							<input type="submit" value="Send Me My Coupon" id="input_2" class="btn btn-lg btn-solid btn-block">
 						</div>
+						<input type="hidden" id="simple_spc" name="simple_spc" value="62025549780156" /> 
+
 					</form>
 				</div>
 			</div>
