--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -101,7 +101,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 					<h5 >Want to save time, save money and look awesome?  </h5>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline" id="demo">Give me my $60 Coupon Now! </a>
+					<a href="./register.html" class="btn btn-outline" id="demo">Give me my $60 Coupon Now! </a>
 				</div>
 			</div>
 		</div>
