--- a/register.html
+++ b/register.html
@@ -77,7 +77,7 @@
 							</div>
 							<div class="icon-block-text">
 								<span class="heading editContent">RECIEVE A $60 COUPON CODE</span>
-								<p class="thin editContent">A $60 coupon will be sent directly to your phone. Make sure to use it! </p>
+								<p class="thin editContent">A $60 coupon will be sent directly to your phone. Make sure to reference your code for your discount! </p>
 							</div>
 						</article>
 					</div>
@@ -87,7 +87,7 @@
 								<i class="fa fa-car highlight "></i>
 							</div>
 							<div class="icon-block-text">
-								<span class="heading editContent">GET QUOTE FOR YOUR VEHICLE</span>
+								<span class="heading editContent">GET A QUOTE FOR YOUR VEHICLE</span>
 								<p class="thin editContent">Simply text back for a free quote! </p>
 							</div>
 						</article>
@@ -107,7 +107,7 @@
 						</div>
 						<div class="form-group col-sm-12">
 							
-							<input type="text" class=" form-control required" data-type="input-textbox" id="input_7" name="q7_name" size="10" placeholder="First name" /> 
+							<input type="text" class=" form-control required" data-type="input-textbox" id="input_7" name="q7_name" size="10" placeholder="First name"  /> 
 						</div>
 		
 						<div class="form-group col-sm-12">
