--- a/register.html
+++ b/register.html
@@ -21,6 +21,30 @@
 		<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
 
+<script type="text/javascript">var _kmq = _kmq || [];
+var _kmk = _kmk || 'f889b931a40f26047a859625efd54daf3b6de752';
+function _kms(u){
+  setTimeout(function(){
+    var d = document, f = d.getElementsByTagName('script')[0],
+    s = d.createElement('script');
+    s.type = 'text/javascript'; s.async = true; s.src = u;
+    f.parentNode.insertBefore(s, f);
+  }, 1);
+}
+_kms('//i.kissmetrics.com/i.js');
+_kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69553613-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 
 <body id="register-page" class="register-page">
