--- a/register.html
+++ b/register.html
@@ -45,6 +45,24 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 
 </script>
 
+<style> 
+
+.btn-block.btn-lg.btn-solid.btn{
+	background-color: #c0392b;
+	color: white;
+	border: none;
+}
+
+
+@media (max-width: 767px)  {
+    
+    .heading{
+    	font-size: 16px;
+    }
+}  
+
+</style>
+
 </head>
 
 <body id="register-page" class="register-page">
@@ -126,8 +144,8 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 						 <div class="form-all"> 
 						 	<ul class="form-section page-section">
 						<div class="col-sm-12">
-							<h3 class="editContent highlight">Text Me My Coupon Code!</h3>
-							<p class="editContent highlight"> Don't worry. We never spam or use your information for purposes other than providing you a quote and coupon. </p>
+							<h3 class="editContent highlight">Get a Free Quote!</h3>
+							<p class="editContent highlight"> Don't worry. We never spam or use your information for purposes other than providing you a quote. </p>
 						</div>
 						<div class="form-group col-sm-12">
 							
@@ -147,7 +165,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 						</div> -->
 
 						<div class="form-group col-sm-12">
-							<input type="submit" value="Send Me My Coupon Now!" id="input_10" class="btn btn-lg btn-solid btn-block">
+							<input type="submit" value="Let's Go!" id="input_10" class="btn btn-lg btn-solid btn-block">
 						</div>
 							<input type="hidden" id="simple_spc" name="simple_spc" value="62025549780156" /> 
 
