Added vpv to form submit

--- a/register.html
+++ b/register.html
@@ -139,7 +139,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				
 
 				<div class="col-sm-6" style="padding: 25px 35px;">
-					<form class="form jotform-form lead-form form-light"  action="https://formspree.io/nick@midnightdetailing.com" method="post" name="form_62025549780156" id="62025549780156" accept-charset="utf-8" > 
+					<form class="form jotform-form lead-form form-light"  action="https://formspree.io/nick@midnightdetailing.com" method="post" name="form_62025549780156" id="62025549780156" accept-charset="utf-8" onsubmit="ga('send', { 'hitType': 'pageview', 'page': '/vpv/submitted/', 'title': 'Form Submitted' }); " > 
 						<input type="hidden" name="_subject" value="New Inbound Request" />
 						<input type="hidden" name="_cc" value="alex@midnightdetailing.com,reza6050@mylaurier.ca
 reza6050@mylaurier.ca" />
