--- a/register.html
+++ b/register.html
@@ -144,6 +144,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 						<input type="hidden" name="_cc" value="alex@midnightdetailing.com,reza6050@mylaurier.ca
 reza6050@mylaurier.ca" />
 <input type="hidden" name="_format" value="plain" />
+<input type="hidden" name="_next" value="./thank_you.html" />
 
 						 <div class="form-all"> 
 						 	<ul class="form-section page-section">
