Changed thank you message.

--- a/thank_you.html
+++ b/thank_you.html
@@ -102,7 +102,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 							<div class="icon-block-text">
 								<br>
 							
-								<span class="heading editContent">Thank you. Your coupon is on it's way. If you would like to schedule an appointment right now, call or text 289-335-5750.</span>
+								<span class="heading editContent">Thank you. One of our representatives will contact you within 24 hours. If you would like to schedule an appointment right now, call or text 289-335-5750. Please reference your coupon code: WASH 11!</span>
 								
 							</div>
 						</article>
@@ -118,13 +118,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 
 	</div>
 
-<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.14260" type="text/javascript"></script>
-<script type="text/javascript"> JotForm.init(function(){ JotForm.clearFieldOnHide="disable"; JotForm.onSubmissionError="jumpToFirstError"; });
-</script>
 
-
-<script type="text/javascript">JotForm.ownerView=true;</script>
 
 
 
