--- a/pricing_area.html
+++ b/pricing_area.html
@@ -21,19 +21,6 @@
 		<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
 
-<script type="text/javascript">var _kmq = _kmq || [];
-var _kmk = _kmk || 'f889b931a40f26047a859625efd54daf3b6de752';
-function _kms(u){
-  setTimeout(function(){
-    var d = document, f = d.getElementsByTagName('script')[0],
-    s = d.createElement('script');
-    s.type = 'text/javascript'; s.async = true; s.src = u;
-    f.parentNode.insertBefore(s, f);
-  }, 1);
-}
-_kms('//i.kissmetrics.com/i.js');
-_kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
-</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -138,15 +125,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				</div> -->
 			
 
-        <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=places&language=en-AU"></script>
-        <script>
-            var autocomplete = new google.maps.places.Autocomplete($("#address")[0], {});
 
-            google.maps.event.addListener(autocomplete, 'place_changed', function() {
-                var place = autocomplete.getPlace();
-                console.log(place.address_components);
-            });
-        </script>				
 
 <!-- Sign Up Form --> 
 				<div class="col-sm-6" style="padding: 25px 35px;">
@@ -182,7 +161,14 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 
 						
 
- 
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script type="text/javascript" src="assets/js/jquery.geocomplete.min.js"></script>
+
+<script>
+$('#address').geocomplete();
+</script>
+
+		
 <!-- 						<div class="form-group col-sm-12">
 							
 							<input type="number" class=" form-control required " data-type="input-textbox" id="input_8" name="q8_number" size="8" data-validation="length" data-validation-length="min10" data-validation="number" placeholder="Phone Number" />
