Added pricing page and promo page

--- a/pricing_area.html
+++ b/pricing_area.html
@@ -133,7 +133,7 @@
 						<input type="hidden" name="_subject" value="New Inbound Request" />
 						<input type="hidden" name="_cc" value="alex@midnightdetailing.com,reza6050@mylaurier.ca"/>
 <input type="hidden" name="_format" value="plain" />
-<input type="hidden" name="_next" value="./thank_you.html" />
+<input type="hidden" name="_next" value="./pricing.html" />
 
 						 <div class="form-all"> 
 						 	<ul class="form-section page-section">
