Changed action to formkeep

--- a/pricing_area.html
+++ b/pricing_area.html
@@ -129,11 +129,11 @@
 
 <!-- Sign Up Form --> 
 				<div class="col-sm-6" style="padding: 25px 35px;">
-					<form class="form jotform-form lead-form form-light"  action="https://formspree.io/nick@midnightdetailing.com" method="post" name="form_62025549780156" id="62025549780156" accept-charset="utf-8" onsubmit="ga('send', { 'hitType': 'pageview', 'page': '/vpv/submitted/', 'title': 'Form Submitted' }); " > 
+					<form class="form jotform-form lead-form form-light"  action="https://formkeep.com/f/a4820f36cafc" method="post" name="form_62025549780156" id="62025549780156" accept-charset="utf-8" onsubmit="ga('send', { 'hitType': 'pageview', 'page': '/vpv/submitted/', 'title': 'Form Submitted' }); " > 
 						<input type="hidden" name="_subject" value="New Inbound Request" />
-						<input type="hidden" name="_cc" value="alex@midnightdetailing.com,reza6050@mylaurier.ca"/>
-<input type="hidden" name="_format" value="plain" />
-<input type="hidden" name="_next" value="./pricing.html" />
+						
+
+
 
 						 <div class="form-all"> 
 						 	<ul class="form-section page-section">
